--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,4 +1,3 @@
-
 .countainer-dashboard {
     width: 100%;
     position: relative;
@@ -26,41 +25,94 @@
 
 .d-form-dashboard {
     position: absolute;
-    width: 500px;
+    width: 230px;
     height: 500px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
-.flex-row{
+.content-reg-form {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+}
+
+.d-btns {
+
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.two-btns {
+
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.w-100px {
+    width: 100px;
+}
+
+.flex-row {
     display: flex;
     flex-direction: row;
-};
+}
 
-
+;
 
 
 
 .modal {
     display: none;
-    justify-content: center;
-    align-items: center;
+
 }
 
-.modal-body {
+.modal-body-2 {
+
+    width: 300px;
+    height: 400px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     flex-direction: column;
-    
+    padding: 5px;
+
 }
 
+.form-group-update {
+    width: 100%;
+    position: relative;
+}
+
+.position-right {
+    position: absolute;
+    right: 0;
+}
+
+
 .modal-content {
-    width: 800px;
+    width: 600px;
     height: 550px;
 }
 
 .modal-header {
     position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+}
+
+.modal-title {
+    margin: 0 auto;
 }
 
 .d-welcome-txt {
@@ -72,13 +124,14 @@
 
 
 
-.d-avatar{
+.d-avatar {
 
     margin: 40px 0 0 500px;
- 
+
 }
-.avatar{
+
+.avatar {
     width: 200px;
-    height: 200px; 
+    height: 200px;
     border-radius: 100px;
 }
