--- a/views/bloggerArticles.ejs
+++ b/views/bloggerArticles.ejs
@@ -11,71 +11,84 @@
 </head>
 
 <body>
-    <div class="title">
-        <a href="http://localhost:3000/:role/dashboard"> <button id="btn-see-my-articles" class="btn btn-primary">back
-                dashboard</button></a>
-        <h1>
-            <%=msg%>
-        </h1>
-    </div>
-
-
     <div class="countainer">
-        <p style="display: none;">
-            <%= articles %>
-        </p>
-        <% for(var index=0;index < articles.length ;index++ ){ %>
-            <div class="d-article">
+
+        <img class="img" src="/img/background.jpeg" />
+
+        <div class="content">
+
+            <div class="title">
+                <a href="http://localhost:3000/:role/dashboard"> <button id="btn-see-my-articles"
+                        class="btn btn-primary">back
+                        dashboard</button></a>
+                <h1>
+                    <%=msg%>
+                </h1>
+            </div>
+
+            <p style="display: none;">
+                <%= articles %>
+            </p>
+            <div class="articles">
+                <% for(var index=0;index < articles.length ;index++ ){ %>
+                    <div class="card">
+                        <img class="card-img-top" src="/img/<%=articles[index].image%>" alt="Card image cap">
+                        <div class="card-body">
+                            <h2 class="card-title">
+                                <%=articles[index].title %>
+                            </h2>
+                            <div class="summary">
+                                <p class="card-text">
+                                    <%= (articles[index].text).slice(0,100)%>
+                                </p>
+                            </div>
+
+                        </div>
 
 
+                        <ul class="ul-identify list-group list-group-flush">
+                            <li class="list-group-item">
+                                <h3>writer:</h3>
+                                <%=articles[index].writer %>
 
-                <div class="d-img-article">
-                    <img class="img-blogger-article" src="/img/<%=articles[index].image%>">
-                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <h3> createdAt:</h3>
+                                <%=articles[index].createdAt %>
+                            </li>
 
-                <div class="d-summary">
-                    <h3>summary :</h3>
-                    <p>
-                        <%= (articles[index].text).slice(0,100) %>
-                    </p>
-                </div>
-                <div class="d-info">
-
-                    <h3>writer:</h3>
-                    <%=articles[index].writer %>
-
-                        <h3> createdAt:</h3>
-                        <%=articles[index].createdAt %>
-                </div>
-
-                <div id="d-btn-article" idArticle=" <%=articles[index]._id %>">
+                        </ul>
 
 
-                    <button id="btn-update-article"
-                        class="btn-update-article btn-delete btn btn-primary">update</button>
+                        <div class="d-btns" idArticle="<%=articles[index]._id%>">
 
-                    <form action="http://localhost:3000/blogger/dashboard/articles/seeMine/detailsOneArticle"
-                        method="post">
+                            <button id="btn-update-article"
+                                class="btn-update-article-admin btn btn-primary">update</button>
+                            <form action="http://localhost:3000/admin/dashboard/articles/seeMine/detailsOneArticle"
+                                method="post">
 
-                        <input type="text" style="display: none;" id="article-details" name="idArticle">
-                        <button type="submit" id="btn-see-my-articles"
-                            class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
-                    </form>
+                                <input type="text" style="display: none;" value="<%=articles[index]._id%>"
+                                    name="idArticle">
+                                <button type="submit" id="btn-see-my-articles"
+                                    class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
+                            </form>
 
-                    <form action="http://localhost:3000/blogger/dashboard/articles/seeMine/delete" method="post">
-                        <input type="text" style="display: none;" id="article-delete" name="idArticle">
-                        <button type="submit" id="btn-delete-articles"
-                            class="btn-delete-articles btn btn-primary">Delete</button>
-                    </form>
-                </div>
-
+                            <form action="/admin/dashboard/articles/seeMine/delete" method="post">
+                                <input type="text" style="display: none;" value="<%=articles[index]._id%>"
+                                    name="idArticle">
+                                <button type="submit" id="btn-delete-articles"
+                                    class="btn-delete-articles-admin btn btn-primary">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                    <% } %>
 
             </div>
-            <div class="d-update-article">
 
-                <form action="/blogger/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data"
+            <div class="d-update-article">
+                <form action="/admin/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data"
                     role="form">
-                    <div class="modal" id="modal-updateArticle">
+                    <div class="modal" id="modal-updateArticle-admin">
                         <div class="modal-body">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -85,7 +98,7 @@
                                 </div>
                                 <div class="modal-body">
 
-                                    <input type="text" style="display: none;" id="article-update" name="idArticle">
+                                    <input type="text" style="display: none;" id="idArticle-admin" name="idArticle">
                                     <div class="">
 
                                         <label for="titleArticle">titleArticle:</label>
@@ -96,7 +109,7 @@
                                     <div class="form-group ">
                                         <label for="textArticle">textArticle:</label>
                                         <textarea id="textArticle" name="textArticle" rows="10" cols="100">
-                                            </textarea>
+                                                </textarea>
 
                                     </div>
 
@@ -118,16 +131,8 @@
 
                 </form>
             </div>
-            <% } %>
-
-
-
+        </div>
     </div>
-
-
-
-
-
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
