--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -21,46 +21,56 @@
                 <%= blogger.firstName %>
             </h2>
 
-            <div class="d-form-dashboard">
-                <form class="register-form" action='/blogger/dashboard/delete' method="get">
-                    <div class="content-reg-form">
+            <div class="d-info">
+                <form action='/admin/dashboard/delete' method="get">
+                    <div class="info">
 
-                        <div class="d-flex flex-row justify-content-between">
+                        <div class="row-info">
                             <h4>userName:</h4>
-                            <h4>
+                            <h4 class="position-right">
                                 <%= blogger.userName %>
                             </h4>
                         </div>
-                        <div class="flex-row">
+                        <div class="row-info ">
                             <h4>password:</h4>
-                            <h4>
+                            <h4 class="position-right">
                                 <%= blogger.password %>
                             </h4>
 
                         </div>
 
-                        <div class="flex-row">
+                        <div class="row-info ">
                             <h4>lastName:</h4>
-                            <h4>
+                            <h4 class="position-right">
                                 <%= blogger.lastName %>
                             </h4>
                         </div>
-                        <div class="flex-row">
+                        <div class="row-info ">
                             <h4>firstName:</h4>
-                            <h4>
+                            <h4 class="position-right">
                                 <%= blogger.firstName %>
                             </h4>
                         </div>
-                        <div class="flex-row">
+                        <div class="row-info ">
                             <h4>phoneNumber:</h4>
-                            <h4>
-                                <%= blogger.phoneNumber %>
-                            </h4>
+
+                            <%if((blogger.phoneNumber)){%>
+                                <h4 class="position-right">
+                                    <%= blogger.phoneNumber %>
+                                </h4>
+                                <%}else{ %>
+                                    <h4>
+                                        0<%= blogger.phoneNumber %>
+                                    </h4>
+
+                                    <% } %>
+
+
                         </div>
-                        <div class="flex-row">
+                        <div class="row-info">
 
                             <h4>gender:</h4>
-                            <h4>
+                            <h4 class="position-right">
                                 <%= blogger.gender %>
                             </h4>
 
@@ -68,58 +78,59 @@
 
                     </div>
                     <div class="two-btns">
-                        <button id="btn-update" class="w-100px btn btn-primary">update</button>
-                        <button type="submit" class="w-100px btn-delete btn btn-primary">delete</button>
+                        <button class="btn-update-userInfo w-105px btn btn-success">update</button>
+                        <button type="submit" class="w-105px btn-delete btn btn-danger">delete</button>
                     </div>
 
+                    <div class="d-avatar">
+                        <img class="avatar" src='/img/<%= srcImgBlogger%>' alt="bloggerImage">
+                        <form action="/admin/dashboard/avatar/update" method="post" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="img-reg">put yor image</label>
+                                <input type="file" id="updateAvatar" name="updateAvatar">
+                            </div>
+                            <button id="btn-creat-article" class="btn btn-success">Change My Avatar</button>
+                        </form>
+                    </div>
                 </form>
                 <div class="d-btns">
-                    <a href="http://localhost:3000/blogger/dashboard/articles/seeAll"> <button id="btn-see-my-articles"
+                    <a href="/:role/dashboard/articles/seeAll"> <button id="btn-see-my-articles"
                             class="btn btn-primary">See Whole Articles</button></a>
                     <form action="/logout" method="get">
-                        <button type="submit" class="btn-delete btn btn-primary">logout</button>
+                        <button type="submit" class="btn-delete btn btn-warning">logout</button>
                     </form>
-                    <a href="http://localhost:3000/blogger/dashboard/articles/seeMine"> <button id="btn-see-my-articles"
+                    <a href="/:role/dashboard/articles/seeMine"> <button id="btn-see-my-articles"
                             class="btn btn-primary">See My Articles</button></a>
-                    <form action="/articles/creat" method="get">
-                        <button id="btn-creat-article" class="btn btn-primary">creatArticle</button>
-                    </form>
+
+                    <button id="btn-creat-article" class="btn-creat-article btn btn-primary">creatArticle</button>
+
                 </div>
-                <h2>
-                    <%= err%>
-                </h2>
-            </div>
+                <p style="display: none">
 
-            <div class="d-avatar">
-                <img class="avatar" src='/img/<%= srcImgBlogger%>' alt="bloggerImage">
-                <form action="/blogger/dashboard/avatar/update" method="post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label for="img-reg">put yor image</label>
-                        <input type="file" id="updateAvatar" name="updateAvatar">
-                    </div>
-                    <button id="btn-creat-article" class="btn btn-primary">changeMyProfileImage</button>
-                </form>
+                    <%= msg %>
+                </p>
             </div>
 
 
 
 
-            <!-- updateBloggerInfo modal and form -->
-            <form action="/blogger/dashboard/update" method="post">
-                <div id="modal-update" class="modal">
+            <!-- update Info modal and form -->
+            <form action="/admin/dashboard/update" method="post">
+                <div id="modal-update-userInfo" class="modal">
                     <div class="modal-body">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="modal-title">update user info</h3>
-                                <button type="button" id="close-update" class="btn-close" data-bs-dismiss="modal"
+                                <button type="button" class="close-update-userInfo" data-bs-dismiss="modal"
                                     aria-label="Close"> &#10006</button>
                             </div>
                             <div class="modal-body-2">
+
                                 <div class="form-group-update">
 
                                     <label for="userName">userName:</label>
 
-                                    <input class="position-right" value="<%= blogger.userName %>" type="text"
+                                    <input class="w-450px position-right" value="<%= blogger.userName %>" type="text"
                                         id="userName" name="userName" placeholder="userName">
                                     <h3>
 
@@ -127,26 +138,26 @@
                                 </div>
                                 <div class="form-group-update">
                                     <label for="password">password:</label>
-                                    <input class="position-right" value="<%= blogger.password %>" type="password"
-                                        id="password" name="password" placeholder="Password">
+                                    <input class="w-450px position-right" value="<%= blogger.password %>"
+                                        type="password" id="password" name="password" placeholder="Password">
                                     <p id="alarm-password"></p>
                                 </div>
 
                                 <div class="form-group-update">
                                     <label for="firstName">firstName:</label>
-                                    <input class="position-right" value="<%= blogger.firstName %>" type="text"
+                                    <input class="w-450px position-right" value="<%= blogger.firstName %>" type="text"
                                         id="firstName" name="firstName" placeholder="firstName">
                                     <p id="alarm-firstName"></p>
                                 </div>
                                 <div class="form-group-update">
                                     <label for="lastName"> lastName:</label>
-                                    <input class="position-right" value="<%= blogger.lastName %>" type="text"
+                                    <input class="w-450px position-right" value="<%= blogger.lastName %>" type="text"
                                         id="lastName" name="lastName" placeholder="lastName">
                                     <p id="alarm-lastName"></p>
                                 </div>
                                 <div class="form-group-update">
                                     <label for="userName">phoneNumber:</label>
-                                    <input class="position-right" value="<%= blogger.phoneNumber %>" type="tel"
+                                    <input class="w-450px position-right" value="0<%= blogger.phoneNumber %>" type="tel"
                                         id="phoneNumber" name="phoneNumber" placeholder="e.x: 09151234567">
                                     <div>
                                         <p id="alarm-phoneNumber"></p>
@@ -156,9 +167,9 @@
                                 <div class="form-group-update">
 
                                     <h4>gender:</h4>
-                                    <div class="position-right">
+                                    <div class="position-top-left">
                                         <input class="form-check-input" type="radio" name="gender" id="male"
-                                            value="male" checked>
+                                            value="male">
                                         <label class="form-check-label" for="male">
                                             male </label>
                                         <input class="form-check-input" type="radio" name="gender" id="female"
@@ -167,13 +178,11 @@
                                             female
                                         </label>
                                     </div>
-
-                                    <p id="alarm-gender"></p>
                                 </div>
-
                             </div>
+
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary">Save changes</button>
+                                <button type="submit" class="btn btn-success">Save changes</button>
                             </div>
                         </div>
                     </div>
@@ -181,26 +190,27 @@
             </form>
 
 
-            <!-- creatNewArticle modal and form -->
-            <form action="/blogger/dashboard/articles/creat" method="post" enctype="multipart/form-data" role="form">
+            <!-- creatNewArticle modal and form --> 
+             <form action="/:role/dashboard/articles/creat" method="post" enctype="multipart/form-data" role="form">
                 <div class="modal" id="modal-creatArticle">
                     <div class="modal-body">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Creat New Article</h5>
-                                <button type="button" id="close-creatArticle" class="btn-close" data-bs-dismiss="modal"
+                                <h3 class="modal-title">Creat New Article</h3>
+                                <button type="button" id="close-creatArticle" class="close" data-bs-dismiss="modal"
                                     aria-label="Close"> &#10006</button>
                             </div>
-                            <div class="modal-body">
+                            <div class="modal-body-2">
                                 <div class="">
 
                                     <label for="titleArticle">titleArticle:</label>
 
-                                    <input type="text" id="titleArticle" name="titleArticle" placeholder="titleArticle">
+                                    <input class="w-500px" type="text" id="titleArticle" name="titleArticle"
+                                        placeholder="titleArticle">
                                 </div>
                                 <div class="form-group ">
                                     <label for="textArticle">textArticle:</label>
-                                    <textarea id="textArticle" name="textArticle" rows="10" cols="100">
+                                    <textarea id="textArticle" name="textArticle" rows="12" cols="75">
                                             </textarea>
 
                                 </div>
@@ -213,7 +223,7 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary">Save changes</button>
+                                <button type="submit" class="btn btn-success">Save changes</button>
                             </div>
                         </div>
                     </div>
@@ -222,12 +232,17 @@
 
         </div>
     </div>
-
 </body>
 
-</body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
+
+<script>
+    let msg = `<%= msg %>`;
+    if (msg) {
+        alert(msg)
+    };
+</script>
 
 </html>
