--- a/public/css/Articles.css
+++ b/public/css/Articles.css
@@ -6,13 +6,14 @@
 }
 
 .img {
-
+    width: 100%;
+    height: 1500px;
     position: absolute;
     z-index: 0;
 }
 
 .content {
-
+    left: 30px;
     width: 95%;
     position: absolute;
     z-index: 1;
@@ -22,7 +23,7 @@
     width: 100%;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: start;
 
 }
 
@@ -32,7 +33,7 @@
     border-radius: 10px;
     width: 300px;
     height: 550px;
-    margin: 10px 0 ;
+    margin: 10px 8px;
 }
 
 .card-img-top {
@@ -59,8 +60,81 @@
 
 .d-btns {
     width: 100%;
-    height: 100px;
+    height: 35px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.title {
+    width: 650px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.msg-title {
+    margin: 12px auto;
+    width: 500px;
+    background-color: #ffe6ff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+}
+
+.modal {
+    display: none;
+
+}
+
+.modal-body-2 {
+
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 5px;
+
+}
+
+.position-right {
+    position: absolute;
+    right: 0;
+}
+
+.position-left {
+    position: absolute;
+    left: 135px;
+    top: 5px;
+}
+
+.modal-content {
+    width: 600px;
+    height: 550px;
+}
+
+.modal-header {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+}
+
+.modal-title {
+    margin: 0 auto;
+}
+.w-450px{
+    width: 450px;
+}
+
+.w-500px{
+
+    width: 500px;
 }
