--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -20,45 +20,62 @@
     width: 100%;
     position: absolute;
     z-index: 0;
-    height: 100%;
+    height: fit-content;
 }
 
-.d-form-dashboard {
-    position: absolute;
-    width: 230px;
+.d-info {
+
+    width: 280px;
     height: 500px;
-    margin-top: 100px;
+    margin-top: 35px;
+
 }
 
-.content-reg-form {
+.info {
     width: 100%;
-    height: 70%;
+    height: 400px;
+    border: 1px solid greenyellow;
+    border-radius: 6px;
+    background-color: rgb(231, 236, 223);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 
+}
+
+.row-info {
+    width: 100%;
+    position: relative;
+    display: flex;
 
 }
 
 .d-btns {
-
+    margin-top: 10px;
     width: 100%;
+    height: 80px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+
 }
 
 .two-btns {
-
+    margin-top: 10px;
     width: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
 }
 
-.w-100px {
-    width: 100px;
+;
+
+.w-105px {
+    width: 105px;
 }
+
+;
 
 .flex-row {
     display: flex;
@@ -72,19 +89,36 @@
 .modal {
     display: none;
 
-}
+};
+
+.modal-header {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+};
+
+.modal-title {
+    margin: 0 auto;
+};
+
+.modal-content {
+    width: 600px;
+    height: 550px;
+};
 
 .modal-body-2 {
-
-    width: 300px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-direction: column;
     padding: 5px;
 
-}
+};
 
 .form-group-update {
     width: 100%;
@@ -96,24 +130,19 @@
     right: 0;
 }
 
-
-.modal-content {
-    width: 600px;
-    height: 550px;
+.position-left {
+    position: absolute;
+    left: 135px;
+    top: 5px;
 }
 
-.modal-header {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-
+.position-top-left {
+    position: absolute;
+    left: 150px;
+    top: 250px;
 }
 
-.modal-title {
-    margin: 0 auto;
-}
+
 
 .d-welcome-txt {
     width: 500px;
@@ -125,8 +154,10 @@
 
 
 .d-avatar {
-
-    margin: 40px 0 0 500px;
+    width: 200px;
+    position: absolute;
+    right: 10px;
+    top: 100px;
 
 }
 
@@ -134,4 +165,13 @@
     width: 200px;
     height: 200px;
     border-radius: 100px;
+}
+
+.w-450px {
+    width: 450px;
+}
+
+.w-500px {
+
+    width: 500px;
 }
