--- a/views/admin/wholearticles.ejs
+++ b/views/admin/wholearticles.ejs
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <div class="countainer">
 
         <img class="img" src="/img/background.jpeg" />
@@ -22,9 +21,11 @@
                 <a href="http://localhost:3000/:role/dashboard"> <button id="btn-see-my-articles"
                         class="btn btn-primary">back
                         dashboard</button></a>
-                <h1>
-                    <%=msg%>
-                </h1>
+                <div class="msg-title">
+                    <h1>
+                        <%=msg%>
+                    </h1>
+                </div>
             </div>
 
             <p style="display: none;">
@@ -55,27 +56,32 @@
                             </li>
                             <li class="list-group-item">
                                 <h3> createdAt:</h3>
-                                <%=articles[index].createdAt %>
+                                <%=(articles[index].createdAt)%>
+                                    <%# .split(' ').splice(0,5).join(' ') %> 
                             </li>
 
                         </ul>
 
 
                         <div class="d-btns" idArticle="<%=articles[index]._id%>">
-                            <form action="/blogger/dashboard/articles/seeAll/detailsOneArticle"
+
+                            <button id="btn-update-article"
+                                class="btn-update-article-admin btn btn-primary">Update</button>
+
+                            <form action="/admin/dashboard/articles/seeMine/detailsOneArticle"
                                 method="post">
 
                                 <input type="text" style="display: none;" value="<%=articles[index]._id%>"
                                     name="idArticle">
                                 <button type="submit" id="btn-see-my-articles"
-                                    class="btn-details-articles btn btn-primary">seeDetailsArticle</button>
+                                    class="btn-details-articles btn btn-success">See More</button>
                             </form>
 
                             <form action="/admin/dashboard/articles/seeMine/delete" method="post">
                                 <input type="text" style="display: none;" value="<%=articles[index]._id%>"
                                     name="idArticle">
-                                <button type="submit" style="display: none;" id="btn-delete-articles"
-                                    class="btn-delete-articles-admin btn btn-primary">Delete</button>
+                                <button type="submit" id="btn-delete-articles"
+                                    class="btn-delete-articles-admin btn btn-danger">Delete</button>
                             </form>
                         </div>
                     </div>
@@ -83,57 +89,51 @@
 
             </div>
 
-            <div class="d-update-article">
-                <form action="/admin/dashboard/articles/seeMine/update" method="post" enctype="multipart/form-data"
-                    role="form">
-                    <div class="modal" id="modal-updateArticle-admin">
-                        <div class="modal-body">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">Update Article</h5>
-                                    <button type="button" class="close-updateArticle btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"> &#10006</button>
+            <form action="/admin/dashboard/articles/seeMine/update" method="post">
+                <div class="modal" id="modal-updateArticleAdmin">
+                    <div class="modal-body">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title">Update Article</h3>
+                                <button type="button"  class="close-article-update-admin" data-bs-dismiss="modal"
+                                    aria-label="Close"> &#10006</button>
+                            </div>
+                            <div class="modal-body-2">
+                                <div class="">
+
+                                    <label for="titleArticle">titleArticle:</label>
+
+                                    <input class="w-500px" type="text" id="titleArticle" name="titleArticle" placeholder="titleArticle">
                                 </div>
-                                <div class="modal-body">
-
-                                    <input type="text" style="display: none;" id="idArticle-admin" name="idArticle">
-                                    <div class="">
-
-                                        <label for="titleArticle">titleArticle:</label>
-
-                                        <input type="text" id="titleArticle" name="titleArticle"
-                                            placeholder="titleArticle">
-                                    </div>
-                                    <div class="form-group ">
-                                        <label for="textArticle">textArticle:</label>
-                                        <textarea id="textArticle" name="textArticle" rows="10" cols="100">
-                                                </textarea>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="UpdateArticleImg">Image Of Article:</label>
-                                        <input type="file" id="UpdateArticleImg" name="UpdateArticleImg">
-
-                                    </div>
+                                <div class="form-group ">
+                                    <label for="textArticle">textArticle:</label>
+                                    <textarea id="textArticle" name="textArticle" rows="12" cols="75">
+                                            </textarea>
 
                                 </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="close-updateArticle btn btn-secondary">Close</button>
-                                    <button id="save-update-article" type="submit" class="btn btn-primary">Save
-                                        changes</button>
+
+                                <div class="form-group">
+                                    <label for="img-article">Image Of Article:</label>
+                                    <input type="file" id="imgArticle" name="imgArticle">
+
                                 </div>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-success">Save changes</button>
                             </div>
                         </div>
                     </div>
+                </div>
+            </form>
 
-                </form>
-            </div>
         </div>
     </div>
-</body>
 
+
+</body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
+
 </html>
