--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -89,56 +89,33 @@
 .modal {
     display: none;
 
-};
-
-.modal-body{
-    
-    width: 1000px;
-    height:1050px;
-};
-
-.modal-header {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-
-};
-
-.modal-title {
-    margin: 0 auto;
-};
-
-.modal-content {
-  
-    width: 600px;
-    height: 550px;
-};
-
-
-.modal-body-2 {
-  
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 5px;
-
-};
-
-.form-group-update {
-    width: 100%;
-    position: relative;
 }
 
-.position-right {
+.countainer-elem-update {
 
- margin-right: 3px;
+    margin: 8px 3px;
 
-};
+}
+
+.labels-update {
+    margin: 0 5px;
+    width: 110px;
+
+}
+
+.input-update {
+    width: 400px;
+    margin-left: 20px;
+
+}
+
+.input-update-gender {
+
+    width: 200px;
+    margin: 0 0 0 143px;
+}
+
+
 
 .position-left {
     position: absolute;
@@ -161,7 +138,11 @@
     font-weight: bolder;
 }
 
-
+.close-update-userInfo{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
 
 .d-avatar {
     width: 200px;
